add swagger auth header (#5)
